# tickflow

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_volatility.py
docs/: api-reference.md  architecture.md  design-notes.md  references.md  usage.md
examples/: 01_realized_volatility.py  02_information_bars.py  03_microstructure.py  04_jump_detection.py  README.md
scripts/: release.sh
src/tickflow/: __init__.py  __main__.py  _constants.py  _validation.py  bars.py  cli.py  exceptions.py  execution.py  flow.py  io.py  jumps.py  microstructure.py  orderbook.py  range_vol.py  range_volatility.py  resample.py  types.py  volatility.py
tests/: conftest.py  test_bars.py  test_cli.py  test_execution.py  test_flow.py  test_io.py  test_jumps.py  test_microstructure.py  test_orderbook.py  test_range_vol.py  test_resample.py  test_validation.py  test_version.py  test_volatility.py
