[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickflow"
version = "0.0.0"
description = "Tools for analysing high-frequency financial time series"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "David Young" }]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tickflow"]
