[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickflow"
version = "0.2.0"
description = "Tools for analysing high-frequency financial time series"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "David Young" }]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.6",
]

[project.scripts]
tickflow = "tickflow.cli:main"

[project.urls]
Homepage = "https://github.com/davidy749/tickflow"
Issues = "https://github.com/davidy749/tickflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tickflow"]
artifacts = ["src/tickflow/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["tickflow"]
branch = true
