[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickflow"
version = "0.3.0"
description = "Tools for analysing high-frequency financial time series"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "David Young" }]
keywords = ["high-frequency", "finance", "volatility", "microstructure", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=2.1.0",
]

[project.scripts]
tickflow = "tickflow.cli:main"

[project.urls]
Homepage = "https://github.com/davidy749/tickflow"
Issues = "https://github.com/davidy749/tickflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tickflow"]
artifacts = ["src/tickflow/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["tickflow"]
branch = true
